Added abstraction for power value sources.